Revert change to attempt to prevent scroll bar from appearing, as it made the page get a horizontal scroll bar.
git-svn-id: https://devel.nmrbox.org/svn/nmrbox/trunk/web@7611 33504fd2-e2af-4168-9044-610c50ee6ce2

--- a/newweb/nmrbox/src/custom-theme.scss
+++ b/newweb/nmrbox/src/custom-theme.scss
@@ -830,8 +830,3 @@ They make the active tab seem lit up by default.
   background: none !important;
 }
 */
-
-/* Don't make the page move when the scroll bar appears. */
-html {
-  overflow-y: scroll;
-}
